# lutra

./: CMakeLists.txt  ireland_lane_params.yaml  package.xml  sonar_plot_params.yaml
data/: 2015-12-04-15-02-43.bag  ireland_lane_GP.csv  ireland_lane_pond.csv  sonar.rviz  sonar_data.pkl
launch/: lutra.launch  lutra_ireland.launch  lutra_vis.launch
scripts/: bfm_explorer.py  box_waypoints.py  fast_marcher.py  fm_graphtools.py  fm_plottools.py  grid_testing.py  lutra_fm_explore.py  lutra_fm_ireland.py  make_video.py  simple_simulator.py  sonar_plot.py
utilities/: plot_sonar.py  point_in_polygon.py  read_bag_file.py  read_bag_file_sonar.py
